# tess-atlas

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: run_toi.yml  tests.yml
src/tess_atlas/: __init__.py
src/tess_atlas/api/: download_analysed_toi.py
src/tess_atlas/cli/: tess_atlas_summary_cli.py
src/tess_atlas/data/: analysis_summary.py  tic_entry.py
src/tess_atlas/data/exofop/: exofop_database.py
src/tess_atlas/notebook_controllers/: notebook_executor.py
src/tess_atlas/notebook_controllers/controllers/toi_notebook_controller/: toi_notebook_core.py
src/tess_atlas/notebook_controllers/templates/: toi_template.py
src/tess_atlas/plotting/phase_plotter/: lightcurve_model_from_samples.py
tests/: test_api.py  test_cli.py  test_exofop_interface.py  test_plots.py
tests/test_data/toi_103_files/: lightcurve.csv
