[build-system]
requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79


[tool.pytest.ini_options]
addopts = "--cov=tess_atlas --cov-report term-missing"
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/tess_atlas/notebook_controllers/templates/*",
    "src/tess_atlas/analysis/transit_model.py"
]
